# pineapplepizza-rust-reference

./: Cargo.toml  README.md  TODO
debian/: copyright  debcargo.toml
examples/: help.🍍🍕  list_items.🍍🍕.slice  self.🍍🍕  simple.🍍🍕  welp.🍍🍕
gentoo/: pineapplepizza-0.1.1.ebuild
src/: main.rs
